--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -24,17 +24,17 @@ jobs:
 
       - name: Create database tables
         env:
-          FLASK_APP: run.py
+          QUART_APP: run.py
           SECRET_KEY: test-secret-key-for-ci
           SECURITY_PASSWORD_SALT: test-salt-for-ci
           SECURITY_TOTP_SECRETS: test-totp-secret
         run: |
           mkdir -p instance
-          uv run flask create-db
+          uv run quart create-db
 
       - name: Run checks
         env:
-          FLASK_APP: run.py
+          QUART_APP: run.py
           SECRET_KEY: test-secret-key-for-ci
           SECURITY_PASSWORD_SALT: test-salt-for-ci
           SECURITY_TOTP_SECRETS: test-totp-secret
